--- a/src/main/resources/templates/WebQuanLy/discount-campaign-edit.html
+++ b/src/main/resources/templates/WebQuanLy/discount-campaign-edit.html
@@ -5,11 +5,20 @@
     <title>Chỉnh sửa đợt giảm giá</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" th:href="@{/css/admin.css}">
+    <script th:src="@{/js/sidebar.js}" defer></script>
 </head>
 <body>
 <input type="hidden" name="id" th:value="${chienDich.id}" />
 
 <div class="d-flex">
+    <div th:replace="~{fragments/sidebar :: sidebar}" class="fixed top-0 left-0 h-full bg-gray-800 text-white w-64"></div>
+
+    <nav class="navbar custom-navbar navbar-expand-lg navbar-light bg-white shadow-sm px-4 fixed top-0 right-0 w-[calc(100%-256px)] d-flex">
+        <!-- Các phần tử khác bên trái (nếu có) -->
+
+        <div class="ms-auto" th:replace="~{fragments/account_dropdown :: accountDropdown(user=${user})}"></div>
+    </nav>
     <div class="content mt-4">
         <form th:action="@{/acvstore/chien-dich-giam-gia/update}" method="post" id="updateCampaignForm">
             <input type="hidden" name="id" th:value="${chienDich.id}" />
